Fixed a graphical glitch on iOS.

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ div {
     width: 100%;
     padding: 15px;
     display: table;
+    box-sizing: border-box;
 }
 
 .main-database-header {
